# robot_ws

./: Dockerfile  README.md  frames_2025-03-28_23.08.06.gv  my_map.pgm  my_map.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/articubot_one/share/articubot_one/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/articubot_one/share/articubot_one/cmake/: articubot_oneConfig-version.cmake  articubot_oneConfig.cmake
install/articubot_one/share/articubot_one/config/: ball_tracker_params_robot.yaml  ball_tracker_params_sim.yaml  drive_bot.rviz  empty.yaml  gaz_ros2_ctl_use_sim.yaml  gazebo_params.yaml  joystick.yaml  main.rviz  map.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml  view_bot.rviz
install/articubot_one/share/articubot_one/description/: camera.xacro  depth_camera.xacro  face.xacro  gazebo_control.xacro  lidar.xacro  (+4 more)
install/firebot/lib/firebot/: lidar_node  motor_controller  odometry_publisher  tf_broadcaster
install/firebot/share/firebot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/firebot_cpp/share/firebot_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/firebot_description/share/firebot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/firebot_hardware_interface/include/firebot_hardware_interface/: firebot_hardware_interface.hpp
install/firebot_hardware_interface/share/firebot_hardware_interface/: firebot_hardware_interface.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/firebot_py/lib/firebot_py/: cmd_vel_stamper  lidar_node  lidar_processing  navigation_control  random_nav_node  serial_bridge  slam_mapping  square_nav_node  thermal_camera  twist_stamper
install/firebot_py/share/firebot_py/: diffbot_controllers.yaml  display.rviz  firebot.launch.py  firebot_map_saver.launch.py  firebot_nav2.launch.py  mapper_params_online_async.yaml  nav2_params.yaml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  twist_mux.yaml
install/py_pubsub/share/py_pubsub/: package.sh  package.xml
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  ros2_control_demo_example_2.xml
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/serial/include/serial/: serial.h  v8stdint.h
install/serial/share/serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/test_package/lib/test_package/: my_publisher
install/test_package/share/test_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/thermal_camera/lib/thermal_camera/: thermal_node
install/thermal_camera/share/thermal_camera/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
src/articubot_one/config/: mapper_params_online_async.yaml  my_controllers.yaml  twist_mux.yaml  view_bot.rviz
src/articubot_one/description/: gazebo_control.xacro  robot_core.xacro  ros2_control.xacro
src/articubot_one/launch/: launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  rsp.launch.py
src/example_2/bringup/config/: diffbot_controllers.yaml
src/example_2/bringup/launch/: diffbot.launch.py
src/example_2/description/ros2_control/: diffbot.ros2_control.xacro
src/example_2/description/urdf/: diffbot.urdf.xacro
src/example_2/hardware/: diffbot_system.cpp
src/firebot/: CMakeLists.txt  package.xml  setup.py
src/firebot/src/: lidar_node.cpp  motor_controller.cpp  odometry_publisher.cpp  tf_broadcaster.cpp
src/firebot_cpp/: CMakeLists.txt  package.xml
src/firebot_description/: CMakeLists.txt
src/firebot_description/config/: my_controllers.yaml
src/firebot_description/launch/: robot_state_publisher.launch.py
src/firebot_description/rviz/: display.rviz
src/firebot_description/urdf/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/firebot_py/: package.xml  setup.cfg  setup.py
src/firebot_py/config/: diffbot_controllers.yaml  display.rviz  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
src/firebot_py/firebot_py/: cmd_vel_stamper.py  lidar_node.py  random_nav_node.py  serial_bridge.py  slam_mapping.py  square_nav_node.py  twist_stamper.py
src/firebot_py/launch/: firebot.launch.py  firebot_map_saver.launch.py  firebot_nav2.launch.py
src/py_pubsub/: package.xml  setup.py
src/test_package/: CMakeLists.txt
src/test_package/src/: my_ros2_package.cpp
src/thermal_camera/: package.xml  setup.py
src/thermal_camera/thermal_camera/: thermal_node.py
(+158 files in other folders)
